I fixed the fonts of the words in the login page so that they are more visible. Also, I made changes to the title background, home button and contact button in the about us page for better visibility and appearance.

--- a/static/login.css
+++ b/static/login.css
@@ -17,7 +17,7 @@
   animation: textclip 2s linear infinite;
   display: inline-block;
   font-size: 40px;
-  font-weight: bolder;
+  font-weight: 900;
   margin-top: 10%;
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -34,12 +34,15 @@
 
 h2 {
   font-family: "Montserrat Medium";
-  font-weight: bold;
+  font: weight 900px;
   max-width: 40ch;
   text-align: center;
   transform: scale(0.94);
   animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
-  color: rgb(140, 255, 0);
+  color: rgb(163, 98, 98);
+  border-color: #fff;
+  border-style: groove;
+  background-color: antiquewhite;
 }
 
 @keyframes scale {
